--- a/src/app/shared/components/numeric-keyboard/numeric-keyboard.component.html
+++ b/src/app/shared/components/numeric-keyboard/numeric-keyboard.component.html
@@ -1,8 +1,20 @@
 <div class="grid grid-cols-3 gap-2">
   @for (numeric of numericKey; track $index) {
-  <button class="p-3 border rounded-lg border-gray-400">{{ numeric }}</button>
+  <button
+    type="button"
+    class="p-3 border rounded-lg border-gray-400"
+    (click)="onSelectValue(numeric)"
+  >
+    {{ numeric }}
+  </button>
   }
 
-  <button class="p-3 border rounded-lg border-gray-400">⌫</button>
-  <button class="p-3 border rounded-lg border-gray-400">⏎</button>
+  <button
+    type="button"
+    class="p-3 border rounded-lg border-gray-400"
+    (click)="onDeleteValue()"
+  >
+    ⌫
+  </button>
+  <button type="submit" class="p-3 border rounded-lg border-gray-400">⏎</button>
 </div>
